# minc

./: .gitignore  LICENSE.md  README.md  dune-project
lib/: alpha.ml  assoc.ml  beta.ml  closure.ml  dune  id.ml  infer.ml  knormal.ml  lexer.mll  llvm.ml  m.ml  op.ml  parser.mly  syntax.ml  type.ml
test/: dune
